--- a/index.html
+++ b/index.html
@@ -1,56 +1,62 @@
 <html>
 <head>
-<title>Index</title>
+    <title>Index</title>
+    <font size="4">
 </head>
-<body>
 
-<header>
-<center>
-<hr>
-<h1 style="color:orange"> Мої хобі </h1>
-<p> <font size="4"> Найбільше я захоплююсь:
-<p> -футбол;
-<p> -гра на гітарі.
+<body style="font-family: cursive; background-color:brown">
+
+<header style="background-color:orange; text-align:center; padding:20px">
+    <h1 style="color:red"> Мої хобі </h1>
 </header>
 
-<section>
-<center>
-<hr>
-  <h1 style="color:red"> Футбол </h1>
-  <link href="https://example.com/css/style.css" rel="stylesheet" type="text/css">
-  <p> Для мене, футбол став не просто відпочинком, а справжньою життєвою місією, що визначає мою кожноденність. </p>
-  <p> Моє хобі - це футбол. Футбол – гра, яка об'єднує мільйони людей по всьому світу. Він вимагає навичок, сил і витрати часу на тренування, але винагородою є неабияке задоволення і незабутні емоції. </p>
-  <p> Також, футбол допомагає мені в подоланні стресу та розвитку фізичних якостей. Постійні тренування покращують мою витривалість, координацію рухів і реакцію на події. Це дозволяє мені бути більшим фізично здоровим та активним. </p>
-  <p> Загалом, футбол для мене не просто гра, це стиль життя. Це моє хобі, яке дарує мені безцінні враження і спільні миті радості з друзями. </p>
+<section style="background-color:orange; margin:20px; padding:20px">
+    <h2 style="color:red"> Футбол </h2>
+    <p>Для мене, футбол став не просто відпочинком, а справжньою життєвою місією.</p>
+    <p>Футбол – гра, яка об'єднує мільйони людей по всьому світу. Він вимагає навичок, сил і витрати часу на тренування, але винагородою є неабияке задоволення і незабутні емоції.</p>
+    <p>Також, футбол допомагає мені в подоланні стресу та розвитку фізичних якостей. Постійні тренування покращують мою витривалість, координацію рухів і реакцію на події. Це дозволяє мені бути більшим фізично здоровим та активним.</p>
+    <p>Загалом, футбол для мене не просто гра, це стиль життя. Це моє хобі, яке дарує мені безцінні враження.</p>
 
-<figure>
-  <img src="https://img2.akspic.ru/previews/7/7/4/0/5/150477/150477-dribling-lot_futbol-sportivnye_trenirovki-igra_s_myachom-sportivnyj_inventar-550x310.jpg" style="width:50%"> 
-</figure>
+    <div style="display:flex">
+        <figure style="flex:1; margin:5px">
+            <img src="https://img2.akspic.ru/previews/7/7/4/0/5/150477/150477-dribling-lot_futbol-sportivnye_trenirovki-igra_s_myachom-sportivnyj_inventar-550x310.jpg" style="width:100%">
+        </figure>
 
-<nav>
-<a href="https://uk.wikipedia.org/wiki/%D0%A4%D1%83%D1%82%D0%B1%D0%BE%D0%BB"> Про футбол </a>
-</nav>
+        <figure style="flex:1; margin:5px">
+            <img src="https://faktypro.com.ua/uploads/img-2/14-cikavih-faktiv-pro-futbol.jpg" style="width:100%">
+        </figure>
 
+        <figure style="flex:1; margin:5px">
+            <img src="https://w.forfun.com/fetch/91/91b8e3cc4e474cf49e89f9c7df3955bc.jpeg" style="width:100%">
+        </figure>
+    </div>
+
+    <nav>
+        <a href="https://uk.wikipedia.org/wiki/%D0%A4%D1%83%D1%82%D0%B1%D0%BE%D0%BB" style="color:red"> Про футбол </a>
+    </nav>
 </section>
 
-<section>
-<center>
-<hr>
-<h1 style="color:red"> Гра на гітарі </h1>
-  <p> Також моє хобі - гра на гітарі, завжди було для мене особливим виразом мистецтва та способом виразити себе. Вона дарує мені можливість зануритися в світ музики, відчути її ритм і мелодію, і втілити власні почуття та емоції через струни та акорди. </p>
-  <p> Гра на гітарі - це не просто навичка, це вміння та мистецтво одночасно. Вона вимагає від мене постійного вдосконалення і терпіння. Навчання новим пісням і технікам гри - це завжди цікавий процес, який розширює мої музичні горизонти. </p>
-  <p> Гра на гітарі наповнює моє серце музикою і дарує радість, яку я готовий ділитися з іншими, даруючи їм звукову красу і мелодію моєї душі. </p>
+<section style="background-color:orange; margin:20px; padding:20px">
+    <h2 style="color:red"> Гра на гітарі </h2>
+    <p>Також моє хобі - гра на гітарі. Вона дарує мені можливість зануритися в світ музики, відчути її ритм і мелодію, і втілити власні почуття та емоції через струни та акорди.</p>
+    <p>Гра на гітарі вимагає від мене постійного вдосконалення і терпіння. Навчання новим пісням і технікам гри - це завжди цікавий процес, який розширює мої музичні горизонти.</p>
+    <p>Гра на гітарі наповнює моє серце музикою і дарує радість, яку я готовий ділитися з іншими.</p>
 
-<figure>
-  <img src="https://zhzh.info/_pu/132/53767077.jpg" style="width:45%"> 
-</figure>
+    <div style="display:flex">
+        <figure style="flex:1; margin:5px">
+            <img src="https://ukr.media/static/ba/aimg/4/1/7/417403_1.jpg" style="width:100%">
+        </figure>
+        <figure style="flex:1; margin:5px">
+            <img src="https://www.brd24.com/up/resize_cache/webp/iblock/717/tvhevvbve1wk970jx8ehulza0fy1kee2.webp" style="width:100%">
+        </figure>
+        <figure style="flex:1; margin:5px">
+            <img src="https://zhzh.info/_pu/132/53767077.jpg" style="width:100%">
+        </figure>
+    </div>
 
-<nav>
-<a href="https://uk.wikipedia.org/wiki/%D0%93%D1%96%D1%82%D0%B0%D1%80%D0%B0"> Про гітару </a>
-</nav>
-
-<hr>
+    <nav>
+        <a href="https://uk.wikipedia.org/wiki/%D0%93%D1%96%D1%82%D0%B0%D1%80%D0%B0" style="color:red"> Про гітару </a>
+    </nav>
 </section>
-
 </body>
 </html>
