--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
     <div style="display:flex">
         <figure style="flex:1; margin:5px">
-            <img src="https://ukr.media/static/ba/aimg/4/1/7/417403_1.jpg" style="width:100%">
+            <img src="https://musicsale.com.ua/images/blog/158/guitarandukulele.jpg" style="width:100%">
         </figure>
         <figure style="flex:1; margin:5px">
             <img src="https://www.brd24.com/up/resize_cache/webp/iblock/717/tvhevvbve1wk970jx8ehulza0fy1kee2.webp" style="width:100%">
