--- a/index.html
+++ b/index.html
@@ -4,11 +4,17 @@
     <font size="4">
 </head>
 
-<body style="font-family: cursive; background-color:brown">
+<body style="font-family:cursive; background-color:brown">
 
-<header style="background-color:orange; text-align:center; padding:20px">
+<header style="background-color:orange; text-align:center; padding:20px; margin:20px">
     <h1 style="color:red"> Мої хобі </h1>
 </header>
+
+<aside style="background-color:chocolate; width:12%; padding:5px; margin:60px 40px 0px 45px; float:left; box-shadow:10px 10px 10px">
+    <p>В мене багато хобі, але я розкажу про два найважливіших для мене:</p>
+    <p>- футбол</p>
+    <p>- гра на гітарі</p>
+</aside>
 
 <section style="background-color:orange; margin:20px; padding:20px">
     <h2 style="color:red"> Футбол </h2>
@@ -58,5 +64,36 @@
         <a href="https://uk.wikipedia.org/wiki/%D0%93%D1%96%D1%82%D0%B0%D1%80%D0%B0" style="color:red"> Про гітару </a>
     </nav>
 </section>
+
+<section style="background-color:orange; margin:20px; padding:20px">
+    <h2 style="color:red"> Список посилань на мої улюблені сайти </h2>
+    <div style="display:flex">
+        <figure style="flex:1; margin:5px">
+            <img src="https://www.youtube.com/img/desktop/yt_1200.png" style="width:100%">
+        </figure>
+        <figure style="flex:1; margin:5px">
+            <img src="https://i.pinimg.com/736x/4e/77/d6/4e77d641ff869dd13862333e9afca1b5.jpg" style="width:100%">
+        </figure>
+        <figure style="flex:1; margin:5px">
+            <img src="https://play-lh.googleusercontent.com/ZU9cSsyIJZo6Oy7HTHiEPwZg0m2Crep-d5ZrfajqtsH-qgUXSqKpNA2FpPDTn-7qA5Q" style="width:100%">
+        </figure>
+    </div>
+
+    <div style="display:flex">
+    <nav style="flex:1; margin:5px">
+        <a href="https://www.youtube.com/" style="color:red"> YouTube </a>
+    </nav>
+    <nav style="flex:1; margin:5px">
+        <a href="https://rezka.ag/" style="color:red"> Rezka </a>
+    </nav>
+    <nav style="flex:1; margin:5px">
+        <a href="https://web.telegram.org/k/" style="color:red"> Telegram </a>
+    </nav>
+    </div>
+</section>
+
+<footer style="background-color:orange; margin:20px 700px 20px 700px; display:flex; justify-content:center; box-shadow:10px 10px 10px">
+    <p style="color:red"> © Brand </p>
+</footer>
 </body>
 </html>
