--- a/index.html
+++ b/index.html
@@ -84,10 +84,10 @@
         <a href="https://www.youtube.com/" style="color:red"> YouTube </a>
     </nav>
     <nav style="flex:1; margin:5px">
-        <a href="https://rezka.ag/" style="color:red"> Rezka </a>
+        <a href="https://hdrezka.ag/" style="color:red"> HDrezka </a>
     </nav>
     <nav style="flex:1; margin:5px">
-        <a href="https://web.telegram.org/k/" style="color:red"> Telegram </a>
+        <a href="https://web.telegram.org/" style="color:red"> Telegram </a>
     </nav>
     </div>
 </section>
