--- a/index.html
+++ b/index.html
@@ -72,10 +72,10 @@
             <img src="https://www.youtube.com/img/desktop/yt_1200.png" style="width:100%">
         </figure>
         <figure style="flex:1; margin:5px">
-            <img src="https://i.pinimg.com/736x/4e/77/d6/4e77d641ff869dd13862333e9afca1b5.jpg" style="width:100%">
+            <img src="https://play-lh.googleusercontent.com/ZU9cSsyIJZo6Oy7HTHiEPwZg0m2Crep-d5ZrfajqtsH-qgUXSqKpNA2FpPDTn-7qA5Q" style="width:100%" style="width:100%">
         </figure>
         <figure style="flex:1; margin:5px">
-            <img src="https://play-lh.googleusercontent.com/ZU9cSsyIJZo6Oy7HTHiEPwZg0m2Crep-d5ZrfajqtsH-qgUXSqKpNA2FpPDTn-7qA5Q" style="width:100%">
+            <img src="https://store-images.s-microsoft.com/image/apps.31997.13510798887167234.6cd52261-a276-49cf-9b6b-9ef8491fb799.30e70ce4-33c5-43d6-9af1-491fe4679377" style="width:100%">
         </figure>
     </div>
 
@@ -84,10 +84,10 @@
         <a href="https://www.youtube.com/" style="color:red"> YouTube </a>
     </nav>
     <nav style="flex:1; margin:5px">
-        <a href="https://hdrezka.ag/" style="color:red"> HDrezka </a>
+        <a href="https://web.telegram.org/" style="color:red"> Telegram </a>
     </nav>
     <nav style="flex:1; margin:5px">
-        <a href="https://web.telegram.org/" style="color:red"> Telegram </a>
+        <a href="https://www.instagram.com/" style="color:red"> Instagram </a>
     </nav>
     </div>
 </section>
