--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     <h2 style="color:red"> Список посилань на мої улюблені сайти </h2>
     <div style="display:flex">
         <figure style="flex:1; margin:5px">
-            <img src="https://www.youtube.com/img/desktop/yt_1200.png" style="width:100%">
+            <img src="https://play-lh.googleusercontent.com/lMoItBgdPPVDJsNOVtP26EKHePkwBg-PkuY9NOrc-fumRtTFP4XhpUNk_22syN4Datc" style="width:100%">
         </figure>
         <figure style="flex:1; margin:5px">
             <img src="https://play-lh.googleusercontent.com/ZU9cSsyIJZo6Oy7HTHiEPwZg0m2Crep-d5ZrfajqtsH-qgUXSqKpNA2FpPDTn-7qA5Q" style="width:100%" style="width:100%">
