--- a/index.html
+++ b/index.html
@@ -14,15 +14,17 @@
         h1 {color: red;}
 
         aside {background-color: chocolate;
-               width: 12%;
+               width: 10%;
                padding: 5px;
                margin: 60px 40px 0px 45px;
                float: left;
                box-shadow: 10px 10px 10px;}
 
-        section {background-color: orange;
-                 margin: 20px;
-                 padding: 20px;}
+        section {
+            background-color: orange;
+            margin: 20px;
+            padding: 20px;
+        }
 
         h2 {color: red;}
 
@@ -47,92 +49,92 @@
 
 <body>
 
-<header>
-    <h1> Мої хобі </h1>
-</header>
+    <header>
+        <h1> Мої хобі </h1>
+    </header>
 
-<aside>
-    <p> В мене багато хобі, але я розкажу про два найважливіших для мене: </p>
-    <p> - футбол </p>
-    <p> - гра на гітарі </p>
-</aside>
+    <aside>
+        <p> В мене багато хобі, але я розкажу про два найважливіших для мене: </p>
+        <li> футбол </li>
+        <li> гра на гітарі </li>
+    </aside>
 
-<section>
-    <h2> Футбол </h2>
-    <p> Для мене, футбол став не просто відпочинком, а справжньою життєвою місією. </p>
-    <p> Футбол – гра, яка об'єднує мільйони людей по всьому світу. Він вимагає навичок, сил і витрати часу на тренування, але винагородою є неабияке задоволення і незабутні емоції. </p>
-    <p> Також, футбол допомагає мені в подоланні стресу та розвитку фізичних якостей. Постійні тренування покращують мою витривалість, координацію рухів і реакцію на події. Це дозволяє мені бути більшим фізично здоровим та активним. </p>
-    <p> Загалом, футбол для мене не просто гра, це стиль життя. Це моє хобі, яке дарує мені безцінні враження. </p>
+    <section>
+        <h2> Футбол </h2>
+        <p> Для мене, футбол став не просто відпочинком, а справжньою життєвою місією. </p>
+        <p> Футбол – гра, яка об'єднує мільйони людей по всьому світу. Він вимагає навичок, сил і витрати часу на тренування, але винагородою є неабияке задоволення і незабутні емоції. </p>
+        <p> Також, футбол допомагає мені в подоланні стресу та розвитку фізичних якостей. Постійні тренування покращують мою витривалість, координацію рухів і реакцію на події. Це дозволяє мені бути більшим фізично здоровим та активним. </p>
+        <p> Загалом, футбол для мене не просто гра, це стиль життя. Це моє хобі, яке дарує мені безцінні враження. </p>
 
-    <div>
-    <figure>
-        <img src="https://img2.akspic.ru/previews/7/7/4/0/5/150477/150477-dribling-lot_futbol-sportivnye_trenirovki-igra_s_myachom-sportivnyj_inventar-550x310.jpg" style="width: 100%">
-    </figure>
-    <figure>
-        <img src="https://faktypro.com.ua/uploads/img-2/14-cikavih-faktiv-pro-futbol.jpg" style="width: 100%">
-    </figure>
-    <figure>
-        <img src="https://w.forfun.com/fetch/91/91b8e3cc4e474cf49e89f9c7df3955bc.jpeg" style="width: 100%">
-    </figure>
-    </div>
+        <div>
+            <figure>
+                <img src="https://img2.akspic.ru/previews/7/7/4/0/5/150477/150477-dribling-lot_futbol-sportivnye_trenirovki-igra_s_myachom-sportivnyj_inventar-550x310.jpg" style="width: 100%">
+            </figure>
+            <figure>
+                <img src="https://faktypro.com.ua/uploads/img-2/14-cikavih-faktiv-pro-futbol.jpg" style="width: 100%">
+            </figure>
+            <figure>
+                <img src="https://w.forfun.com/fetch/91/91b8e3cc4e474cf49e89f9c7df3955bc.jpeg" style="width: 100%">
+            </figure>
+        </div>
 
-    <nav>
-        <a href="https://uk.wikipedia.org/wiki/%D0%A4%D1%83%D1%82%D0%B1%D0%BE%D0%BB" target="_blank"> Про футбол </a>
-    </nav>
-</section>
+        <nav>
+            <a href="https://uk.wikipedia.org/wiki/%D0%A4%D1%83%D1%82%D0%B1%D0%BE%D0%BB" target="_blank"> Про футбол </a>
+        </nav>
+    </section>
 
-<section>
-    <h2> Гра на гітарі </h2>
-    <p> Також моє хобі - гра на гітарі. Вона дарує мені можливість зануритися в світ музики, відчути її ритм і мелодію, і втілити власні почуття та емоції через струни та акорди. </p>
-    <p> Гра на гітарі вимагає від мене постійного вдосконалення і терпіння. Навчання новим пісням і технікам гри - це завжди цікавий процес, який розширює мої музичні горизонти. </p>
-    <p> Гра на гітарі наповнює моє серце музикою і дарує радість, яку я готовий ділитися з іншими. </p>
+    <section>
+        <h2> Гра на гітарі </h2>
+        <p> Також моє хобі - гра на гітарі. Вона дарує мені можливість зануритися в світ музики, відчути її ритм і мелодію, і втілити власні почуття та емоції через струни та акорди. </p>
+        <p> Гра на гітарі вимагає від мене постійного вдосконалення і терпіння. Навчання новим пісням і технікам гри - це завжди цікавий процес, який розширює мої музичні горизонти. </p>
+        <p> Гра на гітарі наповнює моє серце музикою і дарує радість, яку я готовий ділитися з іншими. </p>
 
-    <div>
-    <figure>
-        <img src="https://musicsale.com.ua/images/blog/158/guitarandukulele.jpg" style="width: 100%">
-    </figure>
-    <figure>
-        <img src="https://www.brd24.com/up/resize_cache/webp/iblock/717/tvhevvbve1wk970jx8ehulza0fy1kee2.webp" style="width: 100%">
-    </figure>
-    <figure>
-        <img src="https://zhzh.info/_pu/132/53767077.jpg" style="width: 100%">
-    </figure>
-    </div>
+        <div>
+            <figure>
+                <img src="https://musicsale.com.ua/images/blog/158/guitarandukulele.jpg" style="width: 100%">
+            </figure>
+            <figure>
+                <img src="https://www.brd24.com/up/resize_cache/webp/iblock/717/tvhevvbve1wk970jx8ehulza0fy1kee2.webp" style="width: 100%">
+            </figure>
+            <figure>
+                <img src="https://zhzh.info/_pu/132/53767077.jpg" style="width: 100%">
+            </figure>
+        </div>
 
-    <nav>
-        <a href="https://uk.wikipedia.org/wiki/%D0%93%D1%96%D1%82%D0%B0%D1%80%D0%B0" target="_blank"> Про гітару </a>
-    </nav>
-</section>
+        <nav>
+            <a href="https://uk.wikipedia.org/wiki/%D0%93%D1%96%D1%82%D0%B0%D1%80%D0%B0" target="_blank"> Про гітару </a>
+        </nav>
+    </section>
 
-<section>
-    <h2> Список посилань на мої улюблені сайти </h2>
-    <div>
-    <figure>
-        <img src="https://play-lh.googleusercontent.com/lMoItBgdPPVDJsNOVtP26EKHePkwBg-PkuY9NOrc-fumRtTFP4XhpUNk_22syN4Datc" style="width: 100%">
-    </figure>
-    <figure>
-        <img src="https://play-lh.googleusercontent.com/ZU9cSsyIJZo6Oy7HTHiEPwZg0m2Crep-d5ZrfajqtsH-qgUXSqKpNA2FpPDTn-7qA5Q" style="width: 100%">
-    </figure>
-    <figure>
-        <img src="https://store-images.s-microsoft.com/image/apps.31997.13510798887167234.6cd52261-a276-49cf-9b6b-9ef8491fb799.30e70ce4-33c5-43d6-9af1-491fe4679377" style="width: 100%">
-    </figure>
-    </div>
+    <section>
+        <h2> Список посилань на мої улюблені сайти </h2>
+        <div>
+            <figure>
+                <img src="https://play-lh.googleusercontent.com/lMoItBgdPPVDJsNOVtP26EKHePkwBg-PkuY9NOrc-fumRtTFP4XhpUNk_22syN4Datc" style="width: 100%">
+            </figure>
+            <figure>
+                <img src="https://play-lh.googleusercontent.com/ZU9cSsyIJZo6Oy7HTHiEPwZg0m2Crep-d5ZrfajqtsH-qgUXSqKpNA2FpPDTn-7qA5Q" style="width: 100%">
+            </figure>
+            <figure>
+                <img src="https://store-images.s-microsoft.com/image/apps.31997.13510798887167234.6cd52261-a276-49cf-9b6b-9ef8491fb799.30e70ce4-33c5-43d6-9af1-491fe4679377" style="width: 100%">
+            </figure>
+        </div>
 
-    <div>
-    <nav>
-        <a href="https://www.youtube.com/" target="_blank"> YouTube </a>
-    </nav>
-    <nav>
-        <a href="https://web.telegram.org/" target="_blank"> Telegram </a>
-    </nav>
-    <nav>
-        <a href="https://www.instagram.com/" target="_blank"> Instagram </a>
-    </nav>
-    </div>
-</section>
+        <div>
+            <nav>
+                <a href="https://www.youtube.com/" target="_blank"> YouTube </a>
+            </nav>
+            <nav>
+                <a href="https://web.telegram.org/" target="_blank"> Telegram </a>
+            </nav>
+            <nav>
+                <a href="https://www.instagram.com/" target="_blank"> Instagram </a>
+            </nav>
+        </div>
+    </section>
 
-<footer>
-    <p> © Brand </p>
-</footer>
+    <footer>
+        <p> © Brand </p>
+    </footer>
 </body>
 </html>
