--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <title>Index</title>
+    <title> Index </title>
     <font size="4">
     <style>
         body {font-family: cursive;
@@ -20,11 +20,9 @@
                float: left;
                box-shadow: 10px 10px 10px;}
 
-        section {
-            background-color: orange;
-            margin: 20px;
-            padding: 20px;
-        }
+        section {background-color: orange;
+                 margin: 20px;
+                 padding: 20px;}
 
         h2 {color: red;}
 
